--- a/public/frontend/css/superslides.css
+++ b/public/frontend/css/superslides.css
@@ -92,7 +92,7 @@
 
 .slides-pagination a:hover,
 .slides-pagination a.current {
-	background: #7E8344;
+	background: #3498db;
 }
 
 /* Fullscreen background for SuperSlides */
