--- a/public/frontend/css/typography.css
+++ b/public/frontend/css/typography.css
@@ -16,7 +16,7 @@
 /** 01. Typography
  **************************************************************** **/
 body {
-	color: #666;
+	color: #2c3e50;
 	background:#fff;
 
 	font-family: 'Open Sans', sans-serif;
@@ -33,7 +33,6 @@ body {
 }
 
 h1, h2, h3, h4, h5, h6 {
-	font-family: 'Dosis';
 	font-weight: 300;
 	padding:0; margin:0;
 	color:#181818;
@@ -159,9 +158,7 @@ form input.err {
 		background-color:#fff;
 		z-index:1; /* footer fixed = 0 */
 	}
-	section header p {
-		font-family: 'Dosis';
-	}
+
 	section ul,
 	section ul li {
 		margin:0;
