--- a/public/frontend/css/style.css
+++ b/public/frontend/css/style.css
@@ -50,7 +50,7 @@ body {
 
 h1, h2, h3, h4, h5, h6 {
 	font-weight: normal;
-	font-family: 'Pathway Gothic One', sans-serif;
+	font-family: 'Open Sans Condensed', sans-serif;
 	color: #263555;
 }
 
@@ -72,7 +72,7 @@ h4 {
 	line-height: 20px;
 	font-weight: 300;
 	font-family: 'Open Sans Condensed', sans-serif;
-	color: #fff;
+	color: #000;
 	text-transform: uppercase;
 	padding-top: 33px;
 	margin-bottom: 8px;
